# thirdweb-auth-django

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
config/: settings.py  urls.py
wallet_auth/: apps.py  urls.py  views.py
wallet_auth/templates/auth/: base.html
web/: package-lock.json
