[tool.poetry]
name = "thirdweb-auth-django"
version = "0.1.0"
description = ""
authors = ["Yash Prakash <yashprakash13@gmail.com>"]
readme = "README.md"
packages = [{include = "thirdweb_auth_django"}]

[tool.poetry.dependencies]
python = "3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
